RESOLVED FIXED152733
[Mac] Exiting fullscreen via Mission Control leaves fullcreen window frontmost on desktop
https://bugs.webkit.org/show_bug.cgi?id=152733
Summary [Mac] Exiting fullscreen via Mission Control leaves fullcreen window frontmos...
Jer Noble
Reported 2016-01-05 09:00:21 PST
[Mac] Exiting fullscreen via Mission Control leaves fullcreen window frontmost on desktop
Attachments
Patch (2.31 KB, patch)
2016-01-05 09:09 PST, Jer Noble
no flags
Jer Noble
Comment 1 2016-01-05 09:09:51 PST
Jer Noble
Comment 2 2016-01-05 09:10:23 PST
Simon Fraser (smfr)
Comment 3 2016-01-05 10:48:26 PST
Comment on attachment 268286 [details] Patch lgtm
WebKit Commit Bot
Comment 4 2016-01-05 11:38:31 PST
Comment on attachment 268286 [details] Patch Clearing flags on attachment: 268286 Committed r194593: <http://trac.webkit.org/changeset/194593>
WebKit Commit Bot
Comment 5 2016-01-05 11:38:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.