[Mac] Exiting fullscreen via Mission Control leaves fullcreen window frontmost on desktop https://bugs.webkit.org/show_bug.cgi?id=152733

Reviewed by Eric Carlson.

Rather than ignore -windowDidExitFullScreen: notifications when fullscreen exit was
not initiated by WebKit (and the -window:startCustomAnimationToEnterFullScreenWithDuration:
method was not called), continue to exit fullscreen normally.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):


Canonical link: https://commits.webkit.org/170830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194593 268f45cc-cd09-0410-ab3c-d52691b4dbfc